kong/kong-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kong
spec:
  replicas: 1
  serviceName: kong-proxy
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
      - name: proxy
        image: kong:3.2 # kong:3.6 não suporta cassandra apenas postgres
        ports:
        - containerPort: 8000
        - containerPort: 8443
        - containerPort: 8100
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
        volumeMounts:
        - name: kong-data
          mountPath: /kong_prefix/
      # Configurar o volume hostPath diretamente no pod
      volumes:
      - name: kong-data
        hostPath:
          path: /data/kong # Certifique-se de que este diretório existe e tem as permissões corretas
      restartPolicy: Always
