kong/kong-ingress.yaml
# kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-admin
  namespace: kong
  annotations:
    kubernetes.io/ingress.class: "nginx" 
spec:
  rules:
  - http:
      paths:
      - path: /kong-manager 
        pathType: Prefix
        backend:
          service:
            name: kong-kong-admin
            port:
              number: 8001
