kong/kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-proxy
spec:
  type: NodePort 
  selector:
    app: kong
  ports:
  - name: http
    port: 80
    targetPort: 8000
    nodePort: 31392 # Porta NodePort para o proxy HTTP
  - name: https
    port: 443
    targetPort: 8443
    nodePort: 32018 # Porta NodePort para o proxy HTTPS
  - name: admin  
    port: 8001 
    targetPort: 8001
    nodePort: 30001 # Porta NodePort para o painel de administração

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" 
spec:
  rules:
  - host: desafio
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kong-proxy
            port:
              number: 80
      - path: /kong-manager
        pathType: Prefix
        backend:
          service:
            name: kong-proxy
            port:
              number: 8001
